Update apache local indexv to remove one level of folder

--- a/app/apache2/localhost.css
+++ b/app/apache2/localhost.css
@@ -4,7 +4,7 @@
  * @doc: https://httpd.apache.org/docs/2.4/mod/mod_autoindex.html
  **/
 
- /*
+/*
   * Colors:
   * - text        : #444
   * - title       : #555
@@ -13,7 +13,8 @@
   * - border      : #ccc
   */
 
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
     color: #444;
